# pymdown-multimd-table

./: .gitignore  LICENSE.md  README.md  properdocs.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: configuration.md  index.md  installation.md
docs/_macros/: __init__.py
docs/syntax/: alignment.md  attr-list.md  basic.md  captions.md  colspan.md  headerless.md  inline-formatting.md  multibody.md  multiline.md  multiple-headers.md  rowspan.md  wrappable.md
src/pymdown_multimd_table/: __init__.py  extension.py
tests/: conftest.py  test_alignment.py  test_attr_list.py  test_autolabel.py  test_basic_structure.py  test_captions.py  test_colspan.py  test_combinations.py  test_edge_cases.py  test_headerless.py  test_inline_formatting.py  test_multibody.py  test_multiline.py  test_multiple_headers.py  test_rowspan.py  test_wrappable.py
