[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pymdown-multimd-table"
version = "0.1.0"
description = "Python-Markdown extension for MultiMarkdown 6 table syntax"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["markdown", "extension", "table", "multimarkdown"]
dependencies = ["Markdown>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
